--- a/zipfile.html
+++ b/zipfile.html
@@ -6,11 +6,13 @@
     <title>Upload Zip File</title>
 </head>
 <body>
+
     <h1>Upload a Zip File</h1>
     <form id="zipUploadForm" action="http://139.59.27.235/api/upload-quiz-zip" method="POST" enctype="multipart/form-data">
         <label for="zipFile">Choose a zip file:</label>
-        <input type="file" id="zipFile" name="zipFile" accept=".zip" required>
+        <input type="file" id="zipFile" name="file" accept=".zip" required>
         <button type="submit">Upload</button>
     </form>
 </body>
+
 </html>
